--- a/passage1.html
+++ b/passage1.html
@@ -3,8 +3,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Entry One</title>
+    <title>The Book of Quiet Power — Entry One</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background-color: #0a0a0a;
+            color: #f0f0f0;
+            font-family: 'Georgia', serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 40px 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            line-height: 1.8;
+            font-size: 1.25em;
+            animation: fadeIn 2s ease;
+        }
+
+        .sigil {
+            margin-top: 50px;
+            font-size: 1.5em;
+            opacity: 0.5;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 30px;
+            padding: 10px 20px;
+            border: 1px solid #f0f0f0;
+            text-decoration: none;
+            color: #f0f0f0;
+            transition: background-color 0.3s;
+        }
+
+        .back-link:hover {
+            background-color: #1f1f1f;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -25,7 +71,9 @@
         Speak once. Clearly.<br>
         And let the world echo for you.</p>
 
-        <a href="index.html" class="enter-btn">Return</a>
+        <div class="sigil">//A∴</div>
+
+        <a href="index.html" class="back-link">Return</a>
     </div>
 </body>
 </html>
